<resources>
    <string name="app_name">TuDu List!</string>
    <string name="tasks">Tarefas</string>
    <string name="new_task">nova tarefa</string>
    <string name="title">Título</string>
    <string name="description">Descrição</string>
    <string name="date">Data</string>
    <string name="time">Horário</string>
    <string name="create_task">Criar Tarefa</string>
    <string name="cancel">Cancelar</string>
    <string name="exclude">Excluir</string>
    <string name="back">Voltar</string>
    <string name="edit">Editar</string>
    <string name="detail">Detalhes</string>
    <string name="empty_state_text">Ops! Você não possui <br /> nenhuma tarefa</string>
    <string name="edit_task">Editar Tarefa</string>
    <string name="agendar_tarefa">Agendar Tarefa</string>
    <string name="calendar">Imagem Calendario</string>
    <string name="clock">Imagem Relogio</string>
    <string name="alertdialog"> Deseja mesmo excluir esta tarefa?</string>
</resources>